added space between buttons associated with changing pages on mobile devices

--- a/style/mediaqueries/materiaisEducativos.css
+++ b/style/mediaqueries/materiaisEducativos.css
@@ -101,8 +101,8 @@
     } #timelineDescriptionPages {
         margin-bottom: 40px;
     } #timelineDescriptionPages p {
-        margin-left: 5px;
-        margin-right: 5px;
+        margin-left: 5%;
+        margin-right: 5%;
     } #timelineDescriptionPages p {
         cursor: pointer;
     }
@@ -211,8 +211,8 @@
     } #timelineDescriptionPages {
         margin-bottom: 40px;
     } #timelineDescriptionPages p {
-        margin-left: 5px;
-        margin-right: 5px;
+        margin-left: 5%;
+        margin-right: 5%;
     } #timelineDescriptionPages p {
         cursor: pointer;
     }
