--- a/style/mediaqueries/jogosEducativos.css
+++ b/style/mediaqueries/jogosEducativos.css
@@ -218,7 +218,11 @@
     }
 
     /** TIME LINE BAR */
-    #timelineBar {
+    #timelineBarP5 {
+        /* width: 80%; */
+        height: 30px;
+        border-radius: 10px;
+    } #timelineBar {
         margin-top: 2%;
         margin-bottom: 10%;
 
