--- a/style/mediaqueries/jogosEducativos.css
+++ b/style/mediaqueries/jogosEducativos.css
@@ -54,7 +54,7 @@
         grid-auto-rows: 150px;
         row-gap: 20px;
         column-gap: 8%;
-    } #divGame {
+    } .divGame {
         width: 100%;
         height: 150px;
 
@@ -127,7 +127,7 @@
         grid-auto-rows: 180px;
         row-gap: 40px;
         column-gap: 5%;
-    } #divGame {
+    } .divGame {
         width: 100%;
         height: 180px;
     } #divGameTitle {
@@ -197,7 +197,7 @@
         grid-auto-rows: 180px;
         row-gap: 40px;
         column-gap: 5%;
-    } #divGame {
+    } .divGame {
         width: 100%;
         height: 180px;
     } #divGameTitle {
@@ -271,7 +271,7 @@
         grid-auto-rows: 250px;
         row-gap: 40px;
         column-gap: 5%;
-    } #divGame {
+    } .divGame {
         width: 100%;
         height: 250px;
     } #divGameTitle {
