changed images locations and properly fixed their callbacks in each html

--- a/style/mediaqueries/materiaisEducativos.css
+++ b/style/mediaqueries/materiaisEducativos.css
@@ -84,7 +84,7 @@
         top: -5px;
         z-index: -1;
 
-        background-image: url(../../images/pgPrincipal2.png);
+        background-image: url(../../images/website/images/pgPrincipal2.png);
         background-size: cover;
         background-repeat: no-repeat;
     }#timelineDescription {
@@ -191,7 +191,7 @@
         top: -5px;
         z-index: -1;
 
-        background-image: url(../../images/pgPrincipal2.png);
+        background-image: url(../../images/website/images/pgPrincipal2.png);
         background-size: cover;
         background-repeat: no-repeat;
     } #timelineDescription {
@@ -298,7 +298,7 @@
         height: 100%;
         width: 80%;
 
-        background-image: url(../../images/pgPrincipal2.png);
+        background-image: url(../../images/website/images/pgPrincipal2.png);
         background-size: cover;
         background-repeat: no-repeat;
     } #timelineDescription {
@@ -398,7 +398,7 @@
         height: 100%;
         width: 80%;
 
-        background-image: url(../../images/pgPrincipal2.png);
+        background-image: url(../../images/website/images/pgPrincipal2.png);
         background-size: cover;
         background-repeat: no-repeat;
     } #timelineDescription {
