--- a/style/mediaqueries/jogosEducativos.css
+++ b/style/mediaqueries/jogosEducativos.css
@@ -1,5 +1,12 @@
 /** mobile */
 @media screen and (min-width: 320px) and (max-width: 767px)  {
+    body {
+        background-image: url("../../images/website/images/grey_elements_bg.png");
+        background-size: contain;
+        background-position: 0% 50%;
+        background-repeat: repeat;
+    }
+    
     #timelineContent {
         padding-top: 25%; /* 10 */
     } #txtIntroJogos {
@@ -75,6 +82,13 @@
 
 /** tablet vertical portrait */
 @media screen and (min-width: 768px) and (max-width: 1023px) {
+    body {
+        background-image: url("../../images/website/images/grey_elements_bg.png");
+        background-size: contain;
+        background-position: 0% 50%;
+        background-repeat: repeat;
+    }
+
     #timelineContent {
         padding-top: 25%; /* 10 */
     }
@@ -145,6 +159,13 @@
 
 /** desktop screen */
 @media screen and (min-width: 1024px) and (max-width: 1369px)  {
+    body {
+        background-image: url("../../images/website/images/grey_elements_bg.png");
+        background-size: auto;
+        background-position: 0% 50%;
+        background-repeat: repeat;
+    }
+
     #timelineContent {
         padding-top: 14%; /* 10 */
     }
@@ -215,6 +236,13 @@
 
 /** bigger desktop screen */
 @media screen and (min-width: 1370px) {
+    body {
+        background-image: url("../../images/website/images/grey_elements_bg.png");
+        background-size: contain;
+        background-position: 0% 50%;
+        background-repeat: repeat;
+    }
+
     #timelineContent {
         padding-top: 10%;
     } #titleIntroJogos {
