--- a/style/mediaqueries/materiaisEducativos.css
+++ b/style/mediaqueries/materiaisEducativos.css
@@ -17,7 +17,12 @@
         margin-bottom: 5%;
     }
     
-    #figuresImgDiv a {
+    #figuresImgDiv {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, 15%);
+        row-gap: 15px;
+        column-gap: 15px;
+    } #figuresImgDiv a {
         width: 50px; /* 100 */
         height: 50px; /* 100 */
         border: solid #000;
@@ -140,7 +145,12 @@
         margin-bottom: 5%;
     }
     
-    #figuresImgDiv a {
+    #figuresImgDiv {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, 15%);
+        row-gap: 15px;
+        column-gap: 15px;
+    } #figuresImgDiv a {
         width: 75px; /* 100 */
         height: 75px; /* 100 */
         border: solid #000;
@@ -262,7 +272,12 @@
         margin-bottom: 2%;
     }
     
-    #figuresImgDiv a {
+    #figuresImgDiv {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, 10%);
+        row-gap: 15px;
+        column-gap: 15px;
+    } #figuresImgDiv a {
         width: 75px; /* 100 */
         height: 75px; /* 100 */
         border: solid #000;
@@ -376,12 +391,21 @@
         margin-bottom: 2%;
     }
     
-    #figuresImgDiv a {
+    /* figuras importantes */
+    #figuresImgDiv {
+        /* border-bottom: #FDEBD0 solid 2px; */
+        display: grid;
+        grid-template-columns: repeat(auto-fit, 10%);
+        row-gap: 15px;
+        column-gap: 15px;
+    } #figuresImgDiv a {
         width: 100px;
         height: 100px;
-        border: solid #000;
+        /* background-color: #FDEBD0; */
+        border: solid #000 2px;
         border-radius: 100px;
-        margin-right: 15px;
+        /* margin-right: 15px; */
+        cursor: pointer;
     }
 
     /** TIMELINE */
@@ -473,4 +497,54 @@
     #timelineSection {
         margin-bottom: 100px;
     }
+
+
+}
+
+/* figuras importantes */
+#boy {
+    background-image: url("../../images/website/images/char_boy.png");
+    background-size: contain;
+    background-position: 50%, 50%;
+    background-repeat: no-repeat;
+} #girl {
+    background-image: url("../../images/website/images/char_girl.png");
+    background-size: contain;
+    background-position: 50%, 50%;
+    background-repeat: no-repeat;
+} #woman {
+    background-image: url("../../images/website/images/char_woman.png");
+    background-size: contain;
+    background-position: 50%, 50%;
+    background-repeat: no-repeat;
+} #woman {
+    background-image: url("../../images/website/images/char_woman.png");
+    background-size: contain;
+    background-position: 50%, 50%;
+    background-repeat: no-repeat;
+} #poorMan {
+    background-image: url("../../images/website/images/char_man_poor.png");
+    background-size: contain;
+    background-position: 50%, 50%;
+    background-repeat: no-repeat;
+} #richMan {
+    background-image: url("../../images/website/images/char_man_rich.png");
+    background-size: contain;
+    background-position: 50%, 50%;
+    background-repeat: no-repeat;
+} #military {
+    background-image: url("../../images/website/images/char_military_MFA.png");
+    background-size: contain;
+    background-position: 50%, 50%;
+    background-repeat: no-repeat;
+} #humbergo {
+    background-image: url("../../images/website/images/char_humberto_delgado.png");
+    background-size: contain;
+    background-position: 50%, 50%;
+    background-repeat: no-repeat;
+} #PIDE {
+    background-image: url("../../images/website/images/char_agent_PIDE.png");
+    background-size: contain;
+    background-position: 50%, 50%;
+    background-repeat: no-repeat;
 }
