html individuo fully logically interactive

--- a/style/mediaqueries/materiaisEducativos.css
+++ b/style/mediaqueries/materiaisEducativos.css
@@ -537,7 +537,7 @@
     background-size: contain;
     background-position: 50%, 50%;
     background-repeat: no-repeat;
-} #humbergo {
+} #humberto {
     background-image: url("../../images/website/images/char_humberto_delgado.png");
     background-size: contain;
     background-position: 50%, 50%;
