--- a/style/mediaqueries/individuo.css
+++ b/style/mediaqueries/individuo.css
@@ -40,6 +40,7 @@
         border-bottom: #C0392B dashed 2px;
     } #charGoBack {
         height: 20px;
+        cursor: pointer;
     } #charText {
         margin-top: 40px;
         margin-left: 40px;
@@ -89,6 +90,7 @@
         border-bottom: #C0392B dashed 2px;
     } #charGoBack {
         height: 20px;
+        cursor: pointer;
     } #charText {
         margin-top: 40px;
         margin-left: 40px;
@@ -139,6 +141,7 @@
         border-bottom: #C0392B dashed 2px;
     } #charGoBack {
         height: 20px;
+        cursor: pointer;
     } #charText {
         margin-top: 40px;
         margin-left: 40px;
@@ -194,6 +197,7 @@
         border-bottom: #C0392B dashed 2px;
     } #charGoBack {
         height: 25px;
+        cursor: pointer;
     } #charText {
         margin-top: 40px;
         margin-left: 40px;
