--- a/style/mediaqueries/materiaisEducativos.css
+++ b/style/mediaqueries/materiaisEducativos.css
@@ -51,7 +51,7 @@
     #timelineBar {
         display: none;
     } #timelineContent {
-        height: 80vh; /* 800 */
+        min-height: 80vh; /* 800 */
         margin-bottom: 70px;
     } #timelineBarM {
         height: 15px;
@@ -96,7 +96,7 @@
 
     /** TIMELINE DESCRIPTION/INFO CONTENT */
     #timelineDescriptionBg {
-        height: 100%;
+        min-height: 500px;
         width: 100%;
         
         position: relative;
@@ -106,7 +106,7 @@
         background-size: cover;
         background-repeat: no-repeat;
     } #timelineDescription {
-        height: 100%;
+        min-height: 100%;
         width: 100%;
 
         background-image: linear-gradient(to right, #434343e8 , #434343);
@@ -176,7 +176,7 @@
     #timelineBar {
         display: none;
     } #timelineContent {
-        height: 900px; /* 800 */
+        min-height: 900px; /* 800 */
         margin-bottom: 100px;
     } #timelineBarM {
         height: 15px;
@@ -221,7 +221,7 @@
 
     /** TIMELINE DESCRIPTION/INFO CONTENT */
     #timelineDescriptionBg {
-        height: 100%;
+        min-height: 100%;
         width: 100%;
         
         position: relative;
@@ -231,7 +231,7 @@
         background-size: cover;
         background-repeat: no-repeat;
     } #timelineDescription {
-        height: 101%;
+        min-height: 101%;
         width: 102%;
 
         position: relative;
@@ -301,7 +301,7 @@
         display: flex;
         flex-direction: row;
 
-        height: 600px; /* 800 */
+        min-height: 600px; /* 800 */
         width: 80%;
         padding-left: 10%;
         /* padding-right: 10%; */
@@ -346,14 +346,14 @@
 
     /** TIMELINE DESCRIPTION/INFO CONTENT */
     #timelineDescriptionBg {
-        height: 100%;
+        min-height: 100%;
         width: 100%;
 
         background-image: url(../../images/website/images/pgPrincipal2.png);
         background-size: cover;
         background-repeat: no-repeat;
     } #timelineDescription {
-        height: 100%;
+        min-height: 100%;
         width: 101%;
 
         background-image: linear-gradient(to right, #434343e8 , #434343);
@@ -557,4 +557,6 @@
     background-size: contain;
     background-position: 50%, 50%;
     background-repeat: no-repeat;
+} .underlined {
+    border-bottom: #C0392B solid 1px;
 }
